<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvHeaderFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_filter"
        style="@style/AppTheme.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Sort by -->
    <RelativeLayout
        android:id="@+id/sortRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeaderFilter">

        <ImageView
            android:id="@+id/icon_sort"
            style="@style/AppTheme.FilterIcon"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:tint="@color/greySecondary"
            app:srcCompat="@drawable/ic_sort_white_24dp" />

        <Spinner
            android:id="@+id/spinner_sort"
            style="@style/AppTheme.FilterSpinner"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/icon_sort"
            android:entries="@array/sort_by_general" />

    </RelativeLayout>

    <!-- Cancel and apply buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortRelative">

        <Button
            android:id="@+id/button_reset"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset_filter"
            android:textColor="@color/greySecondary"
            android:theme="@style/ThemeOverlay.FilterButton" />

        <Button
            android:id="@+id/button_cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_filter"
            android:textColor="@color/greySecondary"
            android:theme="@style/ThemeOverlay.FilterButton" />

        <Button
            android:id="@+id/button_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apply_filter"
            android:theme="@style/ThemeOverlay.FilterButton" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>