<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/tvTitleKriteriaDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hint_nama_kriteria_karung"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubTitleKriteriaDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hint_nama_sub_kriteria_karung"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleKriteriaDetail" />

    <TextView
        android:id="@+id/tvNilaiSubKriteriaDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hint_nilai_sub_kriteria_karung"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubTitleKriteriaDetail" />

</androidx.constraintlayout.widget.ConstraintLayout>