<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvSubKodePerbandingan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="18sp"
        android:text="@string/hint_kode_sub_kriteria"
        android:textColor="@color/blackPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvIsiSubKodePerbandingan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:hint="@string/hint_kode_sub_kriteria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubKodePerbandingan" />

    <TextView
        android:id="@+id/tvSubNamaPerbandingan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="18sp"
        android:text="@string/hint_nama_sub_kriteria"
        android:textColor="@color/blackPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIsiSubKodePerbandingan"/>

    <TextView
        android:id="@+id/tvIsiSubNamaPerbandingan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:hint="@string/hint_nama_sub_kriteria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubNamaPerbandingan" />

    <TextView
        android:id="@+id/tvNilaMinPerbandingan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="18sp"
        android:text="@string/hint_nilai_min_sub_kriteria"
        android:textColor="@color/blackPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIsiSubNamaPerbandingan" />

    <TextView
        android:id="@+id/tvIsiNilaiMinPerbandingan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:hint="@string/hint_nilai_min_sub_kriteria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNilaMinPerbandingan" />

    <TextView
        android:id="@+id/tvNilaiMaxPerbandingan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="18sp"
        android:text="@string/hint_nilai_max_sub_kriteria"
        android:textColor="@color/blackPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIsiNilaiMinPerbandingan"/>

    <TextView
        android:id="@+id/tvIsiNilaiMaxPerbandingan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:hint="@string/hint_nilai_max_sub_kriteria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNilaiMaxPerbandingan" />

    <TextView
        android:id="@+id/tvSubEgienVektor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="18sp"
        android:text="@string/hint_eigen_vektor"
        android:textColor="@color/blackPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIsiNilaiMaxPerbandingan"/>

    <TextView
        android:id="@+id/tvIsiSubEigenVektor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:hint="@string/hint_eigen_vektor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubEgienVektor" />

</androidx.constraintlayout.widget.ConstraintLayout>